<resources>
    <string name="app_name">TravelJournal</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid e-mail</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">"New User? Register Here!"</string>
    <string name="forgot_password">"Forgot Your Password?"</string>
    <string name="confirm_password">"Confirm Password"</string>
    <string name="reset_password">"Reset Password"</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_about">About Us</string>
    <string name="profile">Profile</string>
    <string name="subject">Subject</string>
    <string name="feedback">Feedback</string>
    <string name="send_feedback">Send Feedback</string>
</resources>
