<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_gallery"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/menu_contact" />
        <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_info"
        android:title="@string/menu_about" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_pin"
            android:title="@string/profile" />
    </group>
</menu>