<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.travelj2.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.travelj2.fragments.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.travelj2.fragments.ContactUsFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.travelj2.fragments.AboutUsFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

</navigation>