<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ContactUsFragment">
    <View
        android:id="@+id/topView"
        android:layout_width="0dp"
        android:layout_height="144dp"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/waveView"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginTop="144dp"
        android:background="@drawable/ic_wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/topView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="118dp"
        android:layout_height="116dp"
        android:contentDescription="@string/action_sign_in"
        app:layout_constraintBottom_toBottomOf="@+id/waveView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/textTitle"
        android:layout_width="253dp"
        android:layout_height="54dp"
        android:autofillHints="@string/prompt_email"
        android:ems="10"
        android:hint="@string/subject"
        android:inputType="textEmailSubject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waveView" />

    <EditText
        android:id="@+id/textFeedback"
        android:layout_width="253dp"
        android:layout_height="88dp"
        android:autofillHints="@string/prompt_password"
        android:ems="10"
        android:hint="@string/feedback"
        android:inputType="text|textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <Button
        android:id="@+id/sendFeedBack"
        android:layout_width="166dp"
        android:layout_height="54dp"
        android:background="@drawable/round_background"
        android:text="@string/send_feedback"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFeedback" />


</androidx.constraintlayout.widget.ConstraintLayout>