<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

   <Button
        android:id="@+id/registerButton"
        android:layout_width="166dp"
        android:layout_height="54dp"
        android:background="@drawable/round_background"
        android:text="Register"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPassword"
        app:layout_constraintVertical_bias="0.117" />

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="253dp"
        android:layout_height="54dp"
        android:autofillHints="@string/prompt_password"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmailAddress"
        app:layout_constraintVertical_bias="0.058" />

    <EditText
        android:id="@+id/textEmailAddress"
        android:layout_width="253dp"
        android:layout_height="54dp"
        android:autofillHints="@string/prompt_email"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waveView"
        app:layout_constraintVertical_bias="0.018" />

    <View
        android:id="@+id/topView"
        android:layout_width="0dp"
        android:layout_height="144dp"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/waveView"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginTop="144dp"
        android:background="@drawable/ic_wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/topView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="118dp"
        android:layout_height="116dp"
        android:contentDescription="@string/action_sign_in"
        app:layout_constraintBottom_toBottomOf="@+id/waveView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>